# CoF

./: CMakeLists.txt  README.md  compile_commands.json  makefile
include/: components.h  componentvector.h  ecs.h  game.h  shared.h  stack.h  tilesystem.h
src/: componentvector.c  ecs.c  game.c  main.c  stack.c  tilesystem.c
